--- a/bgfadmin/bgfadmin.csproj
+++ b/bgfadmin/bgfadmin.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
 		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<UserSecretsId>b44fa4e1-4060-40e1-ae6a-01ac2668dfc2</UserSecretsId>
 	</PropertyGroup>
 
 	<ItemGroup>
